  * Code cleanup with clang/sparse (fixes #2437, thx kibi)
  * Ignore EPIPE/ECONNRESET after SSL_shutdown
  * Handle ENAMETOOLONG, return 404 Not Found (fixes #2396, thx dererkazo)
  * configure.ac: remove old stuff, add some new to fix warnings in automake 1.12 (fixes #2419, thx blino)
  * add PATCH method (fixes #2424)
  * fix :port handling in $HTTP["host"] checks (fixes #2135. thx liming)

- 1.4.31 - 2012-05-31
  * [ssl] fix segfault in counting renegotiations for openssl versions without TLSEXT/SNI (thx carpii for reporting)
  * Move fdevent subsystem includes to implementation files to reduce conflicts (fixes #2373)
  * [mod_compress] fix handling if etags are disabled but cache-dir is set - may lead to double response
  * disable mmap by default (fixes #2391)
  * buffer_caseless_compare: always convert letters to lowercase to get transitive results, fixing array lookups (fixes #2405)
  * Fix handling of empty header list entries in http_request_split_value, fixing invalid read in valgrind (fixes #2413)
  * Fix access log escaping of " and \\ (fixes #1551)
  * [mod_auth] Fix digest "md5-sess" implementation (Errata ID 1649, RFC 2617) (fixes #2410)
  * [auth] Add "AUTH_TYPE" environment (for *cgi), remove fastcgi specific workaround, add fastcgi test case (fixes #889)
  * [mod_*cgi,mod_accesslog] Fix splitting :port with ipv6 (fixes #2333, thx simoncpu)
  * Detect multiple -f options: show error message instead of assert (fixes #2416)
  * [mod_extforward] Support ipv6 addresses (fixes #1889)
  * [mod_redirect] Support url.redirect-code option (fixes #2247)
  * Fix --enable-mmap handling in configure.ac

- 1.4.30 - 2011-12-18
  * Always use our 'own' md5 implementation, fixes linking issues on MacOS (fixes #2331)
  * Limit amount of bytes we send in one go; fixes stalling in one connection and timeouts on slow systems.
  * [ssl] fix build errors when Elliptic-Curve Diffie-Hellman is disabled