@@ -10,6 +10,7 @@ NEWS
   * configure.ac: remove old stuff, add some new to fix warnings in automake 1.12 (fixes #2419, thx blino)
   * add PATCH method (fixes #2424)
   * fix :port handling in $HTTP["host"] checks (fixes #2135. thx liming)
+  * network_server_init: fix double free and memleak on error (fixes #2440, thx kyprizel)
 
 - 1.4.31 - 2012-05-31
   * [ssl] fix segfault in counting renegotiations for openssl versions without TLSEXT/SNI (thx carpii for reporting)
